ProdIND/ProdPrograms/force-app/main/default/objects/Profile_Master__c/Profile_Master__c.object-meta.xml
<CustomObject>
    <description>This object is used to have data related to profile with their category either salaried or self-employed.</description>
    <label>Profile Master</label>
    <nameField>
        <label>Profile Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Profile Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>