ProdIND/ProdPrograms/force-app/main/default/objects/Profile_Master__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <length>15</length>
    <type>Text</type>
</CustomField>