ProdIND/ProdPrograms/force-app/main/default/objects/Profile_Master__c/fields/Sub_Bucket_Code__c.field-meta.xml
<CustomField>
    <fullName>Sub_Bucket_Code__c</fullName>
    <label>Sub Bucket Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>