ProdIND/ProdPrograms/force-app/main/default/objects/Profile_Master__c/fields/Sub_Bucket_Desc__c.field-meta.xml
<CustomField>
    <fullName>Sub_Bucket_Desc__c</fullName>
    <label>Sub Bucket Desc</label>
    <length>80</length>
    <type>Text</type>
</CustomField>